# euro-neurips-vrp-2022-quickstart

./: .gitignore  .gitmodules  LICENSE  README.md  controller.py  create_submission.sh  environment.py  final_results.ipynb  install.sh  metadata  python_hgs_nn_tutorial.ipynb  requirements.txt  run.sh  run_parallel_solver.sh  solver.py  tools.py
baselines/hgs_vrptw/: .gitignore  CMakeLists.txt  Individual.cpp  Individual.h  LICENSE  LocalSearch.cpp  Makefile  Params.cpp  Params.h  Population.cpp  Population.h  Split.cpp  __init__.py  commandline.h  main.cpp
baselines/hgs_vrptw/include/: CircleSector.h  Crossover.h  Genetic.h  Individual.h  LocalSearch.h  Matrix.h  Params.h  Population.h  Split.h  commandline.h  xorshift128.h
baselines/hgs_vrptw/lib/: __init__.py
baselines/hgs_vrptw/src/: CMakeLists.txt  Crossover.cpp  Genetic.cpp  Individual.cpp  LocalSearch.cpp  Params.cpp  Population.cpp  bindings.cpp  main.cpp
instances/: LICENSE  ORTEC-VRPTW-ASYM-01829532-d1-n324-k22.txt  ORTEC-VRPTW-ASYM-02182cf8-d1-n327-k20.txt  ORTEC-VRPTW-ASYM-04c694cd-d1-n254-k18.txt  ORTEC-VRPTW-ASYM-0797afaf-d1-n313-k20.txt  ORTEC-VRPTW-ASYM-08d8e660-d1-n460-k42.txt  ORTEC-VRPTW-ASYM-0dc59ef2-d1-n213-k25.txt  ORTEC-VRPTW-ASYM-11527044-d1-n470-k27.txt  ORTEC-VRPTW-ASYM-13db18b2-d1-n310-k20.txt  ORTEC-VRPTW-ASYM-152bab99-d1-n215-k20.txt  ORTEC-VRPTW-ASYM-16b82253-d1-n457-k30.txt  ORTEC-VRPTW-ASYM-19eafe1e-d1-n458-k35.txt  ORTEC-VRPTW-ASYM-1a452a2c-d1-n391-k23.txt  ORTEC-VRPTW-ASYM-1bc16246-d1-n503-k43.txt  ORTEC-VRPTW-ASYM-1bdf25a7-d1-n531-k43.txt  ORTEC-VRPTW-ASYM-1cd538a9-d1-n400-k25.txt  (+232 more)
(+2872 files in other folders)
